CHANGELOG -- $Id: changelog,v 1.36 2005/01/27 22:37:06 shred Exp $


R9 (2005-01-27)
  * Added JCollapsiblePane.
  * Added serial UIDs where necessary.
  * Added JImageViewer.
  * BUGFIX: forgot some Graphics.dispose().
  * JPrintPreview can now be dragged with the mouse inside a JScrollPane.
  * Added JScrollableImageViewer, which implements the Scrollable interface.

R8 (2004-12-05)
  * Added JHeadline.
  * BUGFIX: JToolbarButton was opaque, which looked strange on some
    Look and Feels.
  * Added convenience methods to copy Strings to and paste Strings from
    the system's default clipboard.
  * Added JPrintPreview class which can be used to preview Printables.
  * Added JToolbarButton constructors for empty and icon buttons.
  * Added JLAFSelector class which allows to select a LAF.

R7 (2004-09-27)
  * Switched from JEdit to Eclipse. Findbugs is used as Eclipse plugin.
  * JRememberOptionPane added.
  * SortedList added.
  * EmptyListModel and EmptyTreeModel added.
  * Fixed some Findbugs reports.
  * SwingUtils: adding confirm and cancel buttons to JDialogs.
  * Added a jUnit test, more will follow. The jUnit test case classes
    are not part of the jshred.jar. Anyhow you have to copy junit.jar
    to your ant lib directory for compilation.

R6 (2004-08-18)
  * NoListSelectionModel added.
  * JHistoryTextField added.
  * XMLWriter got convenience methods for adding parameters to an
    element.
  * XMLWriter now writes much shorter and more readable XML.

R5 (2004-07-20)
  * Added findbugs config file.
  * Findbugs found an unused variable in BrightFilter, now removed.
  * JLabelGroup allows to override the label constructor, and offers
    a method to read the label component.
  * @since now used in JavaDoc.
  * Checked the Serializable state of all classes.

R4 (2004-07-15)
  * SwingUtils.spreadColumns() now also supports a minimum cell width
  * HTTPRequest now correctly sends UTF-8 encoded requests (as proposed