@@ -5,7 +5,7 @@
 <!-- Copyright (c) 2004 Richard "Shred" Körber -->
 <!-- All Rights Reserved. -->
 <!-- Released under MPL 1.1/GPL 2.0/LGPL 2.1 -->
-<!-- $Id: build.xml,v 1.7 2004/09/29 18:13:54 shred Exp $ -->
+<!-- $Id: build.xml,v 1.8 2005/02/09 18:55:10 shred Exp $ -->
 
 <project name="jshred" default="build" basedir=".">
   <description>
@@ -43,7 +43,7 @@
   
   <target name="build" depends="init" description="Build application">
     <!-- Compile from src to build -->
-    <javac srcdir="${src}" destdir="${build}" deprecation="off" optimize="on">
+    <javac srcdir="${src}" destdir="${build}" deprecation="off" optimize="on" source="1.3" target="1.1">
       <classpath refid="project.class.path"/>
     </javac>
   </target>
